fix: align checklist SDKs with live contract